fix(groups): I17 review round 1 - validators, event ordering, store contracts
- Save-time JSON schema specs now also validate against the bundled
  2020-12 meta-schema; parse-only admitted invalid keyword values.
- REGEX validators match through a 500ms deadline-guarded CharSequence
  so a catastrophically backtracking config pattern refuses the write
  instead of pinning the member turn.
- ArtifactConfig tolerates a [null] validator entry so
  requireValidSpecs can report its position instead of an NPE.
- Artifact events: drain+announce serialized on a per-conversation
  mutex (write order), plus a final announce pass per discussion leg
  for writes accepted after a timed-out turn drained.
- listByGroupConversationId re-sorts oldest-first per its contract;
  deleteByGroupConversationId gets the processed-set/no-progress guard.
- Slack mrkdwn-escapes artifact name/editor id; oversize refusal
  rounds up; GDPR cascade Javadoc names artifacts; log sanitized.